<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Má oe</string>
    <string name="menu_label">Qual é \n a música? \n</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Trabalho VB</string>
    <string name="startGameBtn">Play</string>
    <string name="soundOptionBtn">Sound</string>
    <string name="title_activity_game_scene">Má oe</string>
    <string name="title_activity_end_game_scene">Má oe</string>
    <string name="endGameMsg"></string>
    <string name="gameSceneMsg">Qual é a Música, Maestro?</string>
    <string name="textFieldHint">Digite o nome da Música!</string>
    <string name="sendAnswerBtnLabel">Responder</string>
    <string name="playMusicBtnLabel">Play</string>
    <string name="nextBtnLabel">Next</string>
    <string name="retryBtnLabel">Retry</string>
    <string name="menuBtnLabel">Menu</string>
    <string name="title_activity_select_package_scene">SelectPackageScene</string>
    <string name="cLvl"></string>
    <string name="lLvl"></string>
    <string name="updateBtnLabel">Update</string>
    
    <integer-array name="game_data_array">
        <item>0</item>
        <item>0</item> 
    </integer-array>
    

</resources>
