<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textAlignment="center"
    tools:context=".GameSceneActivity" >

    <Button
        android:id="@+id/sendAnswerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:text="@string/sendAnswerBtnLabel" />

    <Button
        android:id="@+id/playMusicBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sendAnswerBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/playMusicBtnLabel" />

    <EditText
        android:id="@+id/answerField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/playMusicBtn"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/textFieldHint"
        android:inputType="textCapWords|textPersonName"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/gameSceneMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/gameSceneMsg"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ProgressBar
        android:id="@+id/musicProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

    <LinearLayout
        android:id="@+id/buttonSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gameSceneMsg"
        android:layout_below="@+id/sendAnswerBtn"
        android:layout_marginLeft="31dp"
        android:orientation="vertical" >
    </LinearLayout>

</RelativeLayout>